<resources>
    <string name="app_name">My APP</string>
    <string name="edit_message"> New Item </string>
    <string name="button_create"> Create </string>
    <string name="title_activity_display_message">My message</string>
    <string name="new_film_item">Film</string>
    <string name="new_book_item">Book</string>
    <string name="create_new_item_title">Create New Item</string>
    <string name="confirm">Confirm</string>
    <string name="new_item_name">Enter Name</string>
</resources>
